lib/src/compiler/tests/testdata/errors/45.out
error[E114]: no matching patterns
 --> line:3:12
  |
3 |     all of them
  |            ^^^^ there's no pattern in this set
  |
  = note: this rule doesn't define any patterns